--- a/proyectoParejas/src/vista/PrincipalVentana.form
+++ b/proyectoParejas/src/vista/PrincipalVentana.form
@@ -103,6 +103,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="XML"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jrb_XmlActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
